# qa

./: .gitignore  README.md  analyze.py
JavaScript-MD5/: index.html
decompressorHash/: Cargo.toml  utest002-7a59d3d0a7aba89a3e2968d2c16e1de4-Hash Decrypter.txt  utest003-0df6405774b3c52d9d70f502f7413d34-anaxxx.txt  utest004-abeac07d3c28c1bef9e730002c753ed4-1234.txt  utest005-c38067659550f92d4dcc0995e1545567-1234.txt  utest006-767179c7a2bff19651ce97d294c30cfb-1234.txt
decompressorHash/src/: main.rs
generatePermutations_rs/: Cargo.toml
generatePermutations_rs/src/: main.rs
jsAnalysis/: index.html  index.js
jsAnalysis/css/: demo.css
v1/: arch.txt  in01.txt  in02.txt  in03.txt  qa - Copy (2).php  qa - Copy.php  qa@2014-04-10.09.46.php  qa@2014-04-10.11.25.php  qa@2014-04-10.16.25.php  qa@2014-04-11.09.40.php  qa@2014-04-11.15.00.php  qa@2014-04-11.16.11 - use internat crc cache, failed.php  qa@2014-04-11.17.00.php
v2/: analyze.py  mt.py  solve.py  test-full.py  test-mt.py  test-nr.py  test.py
v2/Solver/: Base.py  NRSumAndSplitPointAndBinaryDiffAndXorSum.py  mtBase.py  sum.py  sumAndMD5.py  sumAndMedian.py  sumAndSplitPoint.py  sumAndSplitPointAndBinaryDiff.py  sumAndSplitPointAndBinaryDiffAndXorSum.py  sumAndSplitPointAndXorSum.py
v2/Tests/: Base.py
v3/: TARGET.txt  test.py
v3/Solver/: Base.py  sum.py
v3/Tests/: Base.py
v4-cpp/: v1.cpp
v5 preprocessor/rs_v1_012/: Cargo.toml
v5 preprocessor/v1/: preprocess.py  preprocess012.py  preprocess100.py  test-16b.sh
v5 preprocessor/v2/: README.md  (+1 more)
v6/: README.md  generate-hash.php  generate-hash.py
(+7 files in other folders)
